--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 
+[x-cloak] { 
+    display: none !important; 
+}
+
 @keyframes pulse {
     0%, 100% {
         transform: scale(1);
